# LaphaeL-aicmd

./: .gitignore  README.md  README_zh.md  flake.nix  main.py  message.pot  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md
data/: AI_settings.toml  README_for_AI.txt  README_for_AI_zh.txt  _cli_outputs.toml  config.toml  custom_instruct.txt  instruction_prompt.txt
locales/: messages.pot
locales/po_files/: en_US.po  zh_CN.po
locales/zh_CN/LC_MESSAGES/: zh_CN.po
src/: __init__.py  _color_string.py  _print_spoker.py  _user_confirm.py  chat_gemini.py  chat_with_AI.py  config.py  execute_cmd.py  execute_cmd_old.py  globals.py  interact_AI.py  main.py  main_copy.py  match_instruct.py  record_history.py  slow_print.py  utils.py
src/data/: AI_settings.toml  _cli_outputs.toml
src/locales/: messages.pot
src/locales/en_US/LC_MESSAGES/: messages.mo
src/locales/po_files/: en_US.po  zh_CN.po
src/locales/zh_CN/LC_MESSAGES/: messages.mo
