[tool.poetry]
name = "LaphaeL-aicmd"
version = "1.2.3"
description = "Python program enable chat AI to execute commands on linux"
authors = [
  "LaphaeL12304 <169073130+LaphaeL12304@users.noreply.github.com>",
  "DataEraserC <102341238+DataEraserC@users.noreply.github.com>",
]
license = "AGPL-3.0"
readme = "README.md"
homepage = "https://github.com/LaphaeL12304/LaphaeLaicmd-linux"
repository = "https://github.com/LaphaeL12304/LaphaeLaicmd-linux"
keywords = ["aicmd", "ai"]
packages = [
  { include = "*", from = "src", to = "laphael_aicmd", format = [
    "sdist",
    "wheel",
  ] },
]
include = []

[tool.poetry.dependencies]
python = "^3.10"
google-generativeai = "^0.5.3"
openai = "^1.30.1"
ptyprocess = "^0.7.0"
toml = "^0.10.2"
setuptools = "*"
polib = "^1.2.0"

[tool.poetry.scripts]
aicmd = 'laphael_aicmd:cli'
laphael_aicmd = 'laphael_aicmd:cli'
laphael-aicmd = 'laphael_aicmd:cli'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
